Bug 282754. When laying out absolute children, use the computed width/height of the primary frame as the container metrics if they're available. r+sr=dbaron